# votemarket-proof-toolkit

./: .env.example  .gitignore  .uvrc  DEVELOPMENT.md  LICENSE  Makefile  PUBLISHING.md  README.md  STRUCTURE.md  TODO.txt  ape-config.yaml  constraints.txt  package.json  pyproject.toml  requirements.txt  run_streamlit.py  setup.sh  test_fixes.py  tsconfig.json
.build/: __local__.json
.claude/: settings.local.json
abi/: campaign_remote_manager.json  ccip_router.json  gauge_controller.json  oracle_lens.json  vm_platform.json
bytecodes/: BatchCampaigns.json
cache/: balancer_votes_cache.parquet  curve_votes_cache.parquet  frax_votes_cache.parquet  fxn_votes_cache.parquet
docs/: README.md
docs/examples/: check_user_campaign_status.py  claim_rewards.py  close_campaign.py  create_campaign_l1.py  create_campaign_l2.py  manage_campaign_l1.py  manage_campaign_l2.py
docs/examples/utils/: ccip_client.py
docs/guides/: campaign_closing.md  campaign_creation.md  campaign_management.md  claiming_rewards.md
examples/: README.md  get_campaign.py  interactive_demo.py
examples/python/: README.md  all_campaigns.py  calculate_efficiency.py  check_user_status.py  compute_campaign.py  generate_proofs.py  get_campaign.py  get_campaigns_by_manager.py  get_token_prices.py  using_registry.py
examples/python/campaigns/: by_manager.py  close_campaign.py  create_campaign_l1.py  create_campaign_l2.py  list_all.py  manage_campaign_l1.py  manage_campaign_l2.py
examples/python/data/: calculate_efficiency.py  get_token_prices.py
examples/python/proofs/: generate.py
examples/python/users/: check_status.py
examples/typescript/: README.md  estimate_ccip_gas.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
examples/typescript/types/: ccip.ts
script/: process_set_block.py
script/commands/: active_campaigns.py  block_info.py  gauge_proof.py  get_epoch_blocks.py  help.py  user_proof.py
script/contracts/: BatchCampaigns.sol  contract_reader.py
script/data/: main.py  query_campaigns.py  query_votes.py
script/examples/: encode_for_verifier.py  generate_proof.py  generate_proof_example.py  query_active_campaigns.py  query_active_data.py  query_all_votes_example.py  query_eligible_users.py  query_eligible_users_example.py  router.py
script/integration/: TODO.txt  vm_active_proofs.py  vm_set_block.py
script/proofs/: VMProofs.py  main.py
script/proofs/block_header/: encoder.py
script/proofs/proof_generator/: gauge_proof.py  user_proof.py
script/services/: contract_reader.py
script/shared/: ccip_client.py  constants.py  etherscan_service.py  exceptions.py  parquet_cache_service.py  types.py  utils.py  web3_service.py
script/tests/: conftest.py  test_query_campaigns.py  test_vm_proofs.py
script/tests/integration/: Makefile  TestsResults.md  helpers.py  scenario_1.py  scenario_2.py  scenario_3.py  scenario_4.py  setup.py
script/votemarket_proofs/: VMProofs.py
script/votemarket_proofs/proof_generator/: constants.py  gauge_proof.py  user_proof.py
script/votes/: BatchCampaigns.sol  VMVotes.py  constants.py  main.py  query_bounties.py  query_campaigns.py  query_votes.py
scripts/: campaign_proof_checker.py  check_user_claims.py  vm_active_proofs.py  vm_all_platforms.py
src/scripts/: estimate-ccip-gas.ts
src/utils/: ccip.ts
src/votemarket_proofs/commands/: active_campaigns.py  block_info.py  gauge_proof.py  help.py  user_proof.py
src/votemarket_proofs/core/: data.py  proofs.py
src/votemarket_proofs/services/: compile_helper.py  contract_reader.py  encoder.py  gauge_proof.py  parquet_cache_service.py  query_campaigns.py  query_votes.py  user_proof.py  web3_service.py
src/votemarket_proofs/shared/: exceptions.py  types.py  utils.py
src/votemarket_toolkit/campaigns/: types.py
src/votemarket_toolkit/commands/: TODO.txt  active_campaigns.py  block_info.py  gauge_proof.py  get_epoch_blocks.py  index_votes.py  user_proof.py  validation.py
src/votemarket_toolkit/contracts/: compiler.py  reader.py
src/votemarket_toolkit/proofs/: manager.py  types.py
src/votemarket_toolkit/scripts/: estimate_ccip_gas.py
src/votemarket_toolkit/shared/: constants.py  (+2 more)
streamlit_ui/: README.md  app.py  requirements.txt  run.bat  run.sh
streamlit_ui/.streamlit/: config.toml
streamlit_ui/pages/: 1_Active_Campaigns.py  2_User_Claims.py  3_Proof_Generator.py  4_Analytics_Dashboard.py  5_User_Eligibility.py
streamlit_ui/utils/: __init__.py  helpers.py
tests/: conftest.py
tests/integration/: test_campaigns_api.py  test_proofs_api.py
tests/unit/: test_campaign_service_errors.py  test_error_handling.py  test_gauge_validation_errors.py  test_oracle_errors.py  test_registry.py  test_results.py  test_retry.py
votemarket_toolkit/: __init__.py  cli.py  test.py
votemarket_toolkit/analytics/: STATISTICS_EXPLAINED.md  __init__.py  models.py  optimizer.py  service.py  statistics.py
votemarket_toolkit/campaigns/: __init__.py  models.py  service.py  types.py
votemarket_toolkit/commands/: README.md  active_campaigns.py  block_info.py  check_user_eligibility.py  gauge_proof.py  get_epoch_blocks.py  help.py  helpers.py  index_votes.py  list_campaigns.py  user_campaign_status.py  user_proof.py  validation.py
votemarket_toolkit/contracts/: compiler.py  reader.py
votemarket_toolkit/data/: __init__.py  eligibility.py  oracle.py
votemarket_toolkit/proofs/: __init__.py  manager.py  types.py  user_eligibility_service.py
votemarket_toolkit/resources/: __init__.py
votemarket_toolkit/scripts/: estimate_ccip_gas.py
votemarket_toolkit/shared/: constants.py  exceptions.py  logging.py  registry.py  results.py  retry.py  types.py
votemarket_toolkit/utils/: __init__.py  api.py  cache.py  campaign_utils.py  formatters.py  interactive.py  pricing.py
(+65 files in other folders)
