[project]
name = "votemarket-toolkit"
version = "0.0.2"
description = "VoteMarket Toolkit - SDK for interacting with VoteMarket campaigns and proofs"
authors = [{name = "Stake DAO", email = "contact@stakedao.org"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["votemarket", "sdk", "toolkit", "ethereum", "defi", "dao"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
    "w3multicall>=0.3.1",
    "web3>=7.12.0",
    "eth_utils>=5.1.0",
    "py-solc-x>=2.0.3",
    "cmake>=3.30.5",
    "fastparquet>=2024.5.0",
    "pyarrow>=17.0.0",
    "ruff>=0.7.4",
    "rich>=13.7.0",
    "black>=24.1.0",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/stake-dao/votemarket-proof-toolkit"
Repository = "https://github.com/stake-dao/votemarket-proof-toolkit"
Issues = "https://github.com/stake-dao/votemarket-proof-toolkit/issues"
Documentation = "https://github.com/stake-dao/votemarket-proof-toolkit/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/votemarket_toolkit"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/votemarket_toolkit",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "**/TODO.txt",
    "**/external/**",
    "**/__pycache__/**",
    "**/*.pyc",
]

[tool.hatch.build]
include = [
    "src/votemarket_toolkit/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "**/TODO.txt",
    "**/external/**",
    "**/__pycache__/**",
    "**/*.pyc",
    "docs/**",
    "examples/**",
    "assets/**",
    "*.ts",
    "*.js",
    "package.json",
    "pnpm-lock.yaml",
    "tsconfig.json",
    "Makefile",
    "DEVELOPMENT.md",
    "PUBLISHING.md",
    ".env.example",
    "constraints.txt",
    "uv.lock",
    ".uvrc",
    ".python-version",
]

[tool.ruff]
line-length = 79
target-version = "py310"
extend-select = ["I"]

[tool.black]
line-length = 79